25/01/2011 Changes

Cleaned up Bootstrapper class and added more to the hierarchy of classes that gets
bootstrapped. These placeholder skeleton classes will be reloaded from source at a later
point.
I think the hierarchy is correct and I need to double check.
Reimplemented primitive subclassing to use cleaned up Bootstrapper methods.
Removed duplicate registration of new class during subclass.


21/01/2011 Changes

Added bootstrap superclass to bootstrapped String and Symbol so that method lookup
doesnt throw NPE.
Renamed basicAt/basicAtPut to primitiveAt and primitiveAtPut to remove possible confusion with
Smalltalk runtime method of same name.


20/01/2011 Changes

Added generation of Binary Message Send.


19/01/2011 Changes

Added logging around Smalltalk class so verbose option shows what is being done by Redline.
Added parsing of BinaryMessageSends. Still need to support generating code from them.


18/01/2011 Changes

Added logging using a Java Logging Framework. Logging has to work for simple apps as well as
those that run within a J2EE Web Container.
Using SL4J for logging to users can choose their own framework.
Added bootstrap of UndefinedObject and 'nil'.


16/01/2011 Changes

Loading classes from source to registered instances!
Added Trace option to command line. Turn trace on for *lots* of output.


15/01/2011 Changes

Added bootstrap of Symbol and String class so we can create Classes.
Need to implement bootstrapped Subclass creation method, and mechanism for turning
bootstrapped classes into full classes from their source.


14/01/2011 Changes

Refactored Bootstrapper to correctly bootstrap ProtoObject hierarchy according to Smalltalk rules.
Renamed a few methods to make their meaning more clear.
Added RMethod support for applyToWith methods for up to 10 arguments. Redline doesnt support more than
10 keyword arguments right now. It can if required.
Added RObject send method support for up to 10 arguments.